--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,3 @@
 apptainer.enabled = true
 apptainer.autoMounts = true
-apptainer.cacheDir = "$VSC_SCRATCH/.apptainer_cache"
+apptainer.cacheDir = "/home/ditjacobs/Prog/nextflow/.apptainer_cache"
