update workflow with testdata set for multiple pVCF files and pheno files

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,6 @@
+// include config file with parameters 
+includeConfig "${projectDir}/params.config"
+
 apptainer.enabled = true
 apptainer.autoMounts = true
 apptainer.cacheDir = "/home/ditjacobs/Prog/nextflow/.apptainer_cache"
