--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,36 @@
 // include config file with parameters 
 includeConfig "${projectDir}/params.config"
 
-apptainer.enabled = true
-apptainer.autoMounts = true
-apptainer.cacheDir = "/home/ditjacobs/Prog/nextflow/.apptainer_cache"
+profiles {
+    standard {
+            process {
+                executor = 'local'
+                withLabel: "low" {
+                    cpus="1"
+                    memory = "1G"
+
+
+            }
+                withLabel: "high" {
+                    cpus="4"
+                    memory="4G"
+            }
+        }
+    }
+    docker {
+        // enabling docker
+        docker{ 
+            enabled = true 
+            runOptions = "-u \$(id -u):\$(id -g)"
+        }
+    }
+
+    apptainer {
+        apptainer {
+            enabled = true
+            autoMounts = true
+            cacheDir = "/home/ditjacobs/Prog/nextflow/.apptainer_cache"
+        }
+    }
+}
+
