--- a/params.config
+++ b/params.config
@@ -4,5 +4,5 @@ params {
     outdir = "${launchDir}/results"
     // Input files
     vcfpath = "${params.datadir}/*.vcf"
-    pheno = "${params.datadir}/{1,2}_*.csv"
+    pheno = "${params.datadir}/*.csv"
 }
