improving the issues with compatibility docker/apptainer, adding future improvements and complications in the read.md

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,31 +6,28 @@ profiles {
             process {
                 executor = 'local'
                 withLabel: "low" {
-                    cpus="1"
-                    memory = "1G"
-
-
+                    cpus='1'
+                    memory = '1G'
             }
-                withLabel: "high" {
+                withLabel: 'high' {
                     cpus="4"
-                    memory="4G"
+                    memory= "4G"
             }
         }
+    }
+    apptainer {
+            apptainer{
+                enabled = true
+                autoMounts = true
+                //Note that the cache directory should be changed based on desired path
+                cacheDir = "/home/ditjacobs/Prog/nextflow/.apptainer_cache"
+                pullTimeout = "30m"
+            }
     }
     docker {
-        // enabling docker
-        docker{ 
-            enabled = true 
-            runOptions = "-u \$(id -u):\$(id -g)"
-        }
+        //enabling docker 
+            docker.enabled = true 
+            docker.runOptions = '-u $(id -u):$(id -g)'
     }
-
-    apptainer {
-        apptainer {
-            enabled = true
-            autoMounts = true
-            cacheDir = "/home/ditjacobs/Prog/nextflow/.apptainer_cache"
-        }
-    }
+ 
 }
-
