update configuration for HPC and include instructions for HPC in readme

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,7 @@ profiles {
                 enabled = true
                 autoMounts = true
                 //Note that the cache directory should be changed based on desired path
-                cacheDir = "/home/ditjacobs/Prog/nextflow/.apptainer_cache"
+                cacheDir = "$VSC_SCRATCH/.apptainer_cache"
                 pullTimeout = "30m"
             }
     }
